Add Maven build profile for Travis CI